hiding now page as it is not updated

--- a/config.toml
+++ b/config.toml
@@ -20,7 +20,7 @@ menu_links = [
     { url = "$BASE_URL/", name = "Home" },
     { url = "$BASE_URL/posts/", name = "Posts" },
     { url = "$BASE_URL/projects/", name = "Projects" },
-    { url = "$BASE_URL/now/", name = "Now" },
+#    { url = "$BASE_URL/now/", name = "Now" },
     { url = "$BASE_URL/musings/", name = "Musings" },
     { url = "$BASE_URL/book-notes/", name = "Book Notes" },
 ]
